[EFL] Implementation of missing functions in GraphicsContext3DPrivate https://bugs.webkit.org/show_bug.cgi?id=79759

Patch by Hyowon Kim <hw1008.kim@samsung.com> on 2012-03-04
Reviewed by Noam Rosenthal.

The initial patch (Bug 62961) only contains implementations for simple functions
which call GL functions through Evas_GL_API.
This patch implements a little complicated functions such as getActiveAttrib(),
getShaderSource() and so on.

No new tests. No behavior change.

* platform/graphics/efl/GraphicsContext3DPrivate.cpp:
(WebCore::GraphicsContext3DPrivate::getActiveAttrib):
(WebCore::GraphicsContext3DPrivate::getActiveUniform):
(WebCore::GraphicsContext3DPrivate::getError):
(WebCore::GraphicsContext3DPrivate::getIntegerv):
(WebCore::GraphicsContext3DPrivate::getProgramInfoLog):
(WebCore::GraphicsContext3DPrivate::getShaderInfoLog):
(WebCore::GraphicsContext3DPrivate::getShaderSource):

Canonical link: https://commits.webkit.org/97363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109694 268f45cc-cd09-0410-ab3c-d52691b4dbfc